--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -11,7 +11,7 @@
     "import requests\n",
     "from splinter import Browser\n",
     "import time\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
@@ -1882,8 +1882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#executable_path = {'executable_path': 'C:\\\\localref\\\\chromedriver.exe'}\n",
-    "#browser = Browser('chrome', **executable_path, headless=False)"
+    "executable_path = {'executable_path': 'C:\\\\localref\\\\chromedriver.exe'}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
@@ -9554,19 +9554,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "# Mars Facts"
+   ]
   },
   {
    "cell_type": "code",
